--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Maithil Brahmin Sabha Jabalpur</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h3>Welcome to Maithil Brahim Sabha Jabalpur</h3>
+<p>Let’s fight COVID-19 before it is too late</p>
 
 </body>
 </html>
